# vibecoder

./: .gitignore  README.md  pyproject.toml
examples/: sample_task.yaml
tests/: __init__.py  test_iteration.py  test_queue.py  test_task.py  test_verification.py
vibecoder/: __init__.py  config.py  main.py
vibecoder/ai/: __init__.py  base.py  claude.py  claude_code.py  prompts.py
vibecoder/api/: __init__.py  server.py  websocket.py
vibecoder/api/routes/: __init__.py  approvals.py  logs.py  tasks.py
vibecoder/cli/: __init__.py  commands.py
vibecoder/core/: __init__.py  engine.py  iteration.py  permission.py  queue.py  task.py
vibecoder/storage/: __init__.py  database.py  logger.py  models.py
vibecoder/verification/: __init__.py  feedback.py  parser.py  runner.py
vibecoder/web/static/: dashboard.js  index.html  styles.css
